--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,62 @@
-<html>
-    <head>
-        <title>The Resistance</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-    </head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <title>The Resistance</title>
+  </head>
 
-    <body style="font-family: cofleyMain">
-        <p style="font-size: 30px;"> this is example text</p>
-    </body>
+
+  <body style="font-family: cofleyMain">
+
+    <div class="jumbotron text-center">
+        <h1>This is the Resistance</h1>
+    </div>
+
+    <div class="container-fluid text-center" style="background-color: white; padding-top: 10%;">
+        
+        <form class="box" style="text-align: center;" action="#" method="POST">
+            <p>Enter your Game code to start playing!</p>
+            <input type="text" name="code">
+        </form>
+
+    </div>
 
 
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+
+    <style type="text/css">
+    .box{
+        background-color: white;
+    }
+    
+    .box input[type = 'text']{
+        border-radius: 10px;
+        height: 35px;
+        outline: none;
+        text-align: center;
+        transition: .25;
+    }
+
+    .box input[type = 'text']:focus{
+        width: 200px;
+        height: 45px;
+        border-color: rgb(199, 166, 229);
+        border-radius: 20px;
+    }
+
+    
+    </style>
 </html>
