--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
 
     <div class="container-fluid text-center" style="background-color: white; padding-top: 10%;">
         
-        <form class="box" style="text-align: center;" action="#" method="POST">
+        <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
             <p>Enter your Game code to start playing!</p>
             <input type="text" name="code">
         </form>
