--- a/templates/home.html
+++ b/templates/home.html
@@ -8,25 +8,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>The Resistance</title>
-  </head>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/icon.png') }}" 
+    type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='assets/icon.png') }}"
+    type="image/x-icon">  </head>
 
 
   <body style="font-family: cofleyMain">
 
-    <div class="jumbotron text-center">
-        <h1>This is the Resistance</h1>
+
+
+    
+    <div class="container-fluid text-center" >
+     
+        <div style="background-color: rgb(0, 0, 0); opacity: .3;">
+            <video width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                <source src="{{ url_for('static', filename='assets/background.mp4') }}" type="video/mp4">
+              </video>
+        </div>
+
+        <div class="overlay-desc">
+            <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
+                <span >Resistance</span>
+                <p><input type="text" name="code" maxlength="6" placeholder="game code"></p>
+                <input type="submit" value="enter" style="font-size: 25px;">
+            </form>
+         </div>
+
+
     </div>
 
-    <div class="container-fluid text-center" style="background-color: white; padding-top: 10%;">
-        
-        <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
-            <p>Enter your Game code to start playing!</p>
-            <input type="text" name="code">
-        </form>
-
-    </div>
-
-
+    
 
 
 
@@ -39,23 +51,53 @@
 
     <style type="text/css">
     .box{
-        background-color: white;
+        font-size: 50px;
+        color: rgb(0, 0, 0);
+        width: 500px;
+        
     }
     
     .box input[type = 'text']{
-        border-radius: 10px;
-        height: 35px;
+        border-radius: 20px;
+        height: 45px;
         outline: none;
         text-align: center;
         transition: .25;
+        width: 250px;
+        font-size: 25px;
+        color: rgb(49, 48, 48);
+    }
+    ::-webkit-input-placeholder {
+        font-size: 20px;
     }
 
     .box input[type = 'text']:focus{
-        width: 200px;
+        font-size: 35px;
+        width: 270px;
         height: 45px;
         border-color: rgb(199, 166, 229);
         border-radius: 20px;
     }
+
+    .box input[type = 'submit']{
+        outline: none;
+        background: none;
+        border: 0px;
+        transition: .25;
+    }
+
+    .box input[type = 'submit']:hover{
+        color: gray;
+    }
+
+    .overlay-desc {
+  background: rgba(0,0,0,0);
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
     
     </style>
