--- a/templates/home.html
+++ b/templates/home.html
@@ -19,13 +19,15 @@
 
 
     
-    <div class="container-fluid text-center" >
+    <div class="container-fluid text-center" style="width: 100%; margin: 0px; padding: 0px; border: 0px;">
      
         <div style="background-color: rgb(0, 0, 0); opacity: .3;">
             <video width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                 <source src="{{ url_for('static', filename='assets/background.mp4') }}" type="video/mp4">
               </video>
         </div>
+        
+
 
         <div class="overlay-desc">
             <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
@@ -34,6 +36,10 @@
                 <input type="submit" value="enter" style="font-size: 25px;">
             </form>
          </div>
+
+         <div class="overlay-tright">
+          <button class="gs" onclick="location.href = 'getstarted';">get started</button>
+        </div>
 
 
     </div>
@@ -98,6 +104,27 @@
   align-items: center;
   justify-content: center;
 }
+
+.overlay-tright{
+  position: absolute;
+  top: 0; right: 0; bottom: auto; left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gs{
+  padding-top: 30px;
+  padding-right: 30px;
+  outline: none;
+  background: none;
+  border: 0px;
+  transition: .25;
+}
+
+.gs:hover{
+        color: gray;
+    }
 
     
     </style>
