basic and dirty multiplayer

--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -16,16 +16,14 @@
 
   <body style="font-family: cofleyMain">
 
-    {% for item in values%}
-    <p>{{ item.gameCode }}, Email: {{ item.playerList }}</p>
-    {% endfor %}
+    <h1></h1>
 
-    <form method="POST">
-      <input type="text" name='code'>
-      <input type="text" name='pl'>
+    <ul id="users">
 
-      <input type="submit" value="submit">
-    </form>
+    </ul>
+
+
+
 
 
     
@@ -34,7 +32,42 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 
+    <script type="text/javascript">
 
+      var socket = io.connect('http://192.168.1.12:5000/');
+      var roomID = '{{ roomID }}';
+      var name= '{{ name }}';
+      $("h1").html("Lobby for " + roomID);
+      $("#users").append('<li>' + 'test' + '</li>');
+
+      socket.on( 'connect', function() {
+        socket.emit( 'my event', {
+            status : 'lobby',
+            roomid : roomID,
+            playerName : name
+        }) 
+        //console.log({'status':'upside'})
+
+      })
+      
+
+    socket.on( 'my response', function( msg ) {
+        //var obj = JSON.parse('{ "name":"John", "age":30, "city":"New York"}');
+        console.log( msg )
+
+        if (msg.roomid == roomID){
+            $("#users").empty();
+            for (i = 0; i < msg.players.length; i++){
+                $("#users").append('<li>' + msg.players[i] +'</li>');
+        }
+        }
+
+        
+      })
+    </script>
+
+</body>
 </html>
