--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,7 @@
             <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
                 <span >Resistance</span>
                 <p><input type="text" name="code" maxlength="6" placeholder="game code"></p>
+                <p><input type="text" name="uname" maxlength="15" placeholder="name"></p>
                 <input type="submit" value="enter" style="font-size: 25px;">
             </form>
          </div>
