--- a/templates/getstarted.html
+++ b/templates/getstarted.html
@@ -16,25 +16,31 @@
 
   <body style="font-family: cofleyMain">
 
-    {% for item in values%}
-    <p>{{ item.gameCode }}, Email: {{ item.playerList }}</p>
-    {% endfor %}
-
-    <form method="POST">
-      <input type="text" name='code'>
-      <input type="text" name='pl'>
-
-      <input type="submit" value="submit">
+    <h1>Start a new Game</h1>
+    <form action="#" name="createForm" onsubmit="return validateForm()" method="POST">
+      <input type="text" placeholder="name" name="name">
+      <input type="submit" value="start game">
     </form>
 
 
-    
+
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
+
+  <script>
+    function validateForm() {
+      var x = document.forms["createForm"]["name"].value;
+      if (x.replace(/^\s+|\s+$/g, '') == "") {
+        document.forms["createForm"]["name"].value = ""
+        alert("Name must be filled out");
+        return false;
+      }
+    }
+    </script>
 
 
 </html>
