--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
 
 
         <div class="overlay-desc">
-            <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off">
+            <form class="box" style="text-align: center;" action="#" method="POST" autocomplete="off" onsubmit="return validateForm()" name="box"> 
                 <span >Resistance</span>
                 <p><input type="text" name="code" maxlength="6" placeholder="game code"></p>
                 <p><input type="text" name="uname" maxlength="15" placeholder="name"></p>
@@ -41,6 +41,21 @@
          <div class="overlay-tright">
           <button class="gs" onclick="location.href = 'getstarted';">get started</button>
         </div>
+
+        <script>
+          function validateForm() {
+            var n = document.forms["box"]["uname"].value;
+            var c = document.forms["box"]["code"].value;
+
+            if (n.replace(/^\s+|\s+$/g, '') == "") {
+              document.forms["box"]["uname"].value = ""
+              alert("Name must be filled out");
+              return false;
+            }
+
+
+          }
+          </script>
 
 
     </div>
