--- a/templates/getstarted.html
+++ b/templates/getstarted.html
@@ -31,16 +31,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 
-  <script>
-    function validateForm() {
-      var x = document.forms["createForm"]["name"].value;
-      if (x.replace(/^\s+|\s+$/g, '') == "") {
-        document.forms["createForm"]["name"].value = ""
-        alert("Name must be filled out");
-        return false;
-      }
-    }
-    </script>
+  <script src="{{ url_for('static', filename='js/getstartedScript.js') }}"></script>
 
 
 </html>
