--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/homeStyle.css') }}">
     <title>The Resistance</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/icon.png') }}" 
     type="image/x-icon">
@@ -42,20 +43,8 @@
           <button class="gs" onclick="location.href = 'getstarted';">get started</button>
         </div>
 
-        <script>
-          function validateForm() {
-            var n = document.forms["box"]["uname"].value;
-            var c = document.forms["box"]["code"].value;
 
-            if (n.replace(/^\s+|\s+$/g, '') == "") {
-              document.forms["box"]["uname"].value = ""
-              alert("Name must be filled out");
-              return false;
-            }
-
-
-          }
-          </script>
+        <script src="{{ url_for('static', filename='js/homeScript.js') }}"></script>
 
 
     </div>
@@ -72,76 +61,7 @@
   </body>
 
     <style type="text/css">
-    .box{
-        font-size: 50px;
-        color: rgb(0, 0, 0);
-        width: 500px;
-        
-    }
     
-    .box input[type = 'text']{
-        border-radius: 20px;
-        height: 45px;
-        outline: none;
-        text-align: center;
-        transition: .25;
-        width: 250px;
-        font-size: 25px;
-        color: rgb(49, 48, 48);
-    }
-    ::-webkit-input-placeholder {
-        font-size: 20px;
-    }
-
-    .box input[type = 'text']:focus{
-        font-size: 35px;
-        width: 270px;
-        height: 45px;
-        border-color: rgb(199, 166, 229);
-        border-radius: 20px;
-    }
-
-    .box input[type = 'submit']{
-        outline: none;
-        background: none;
-        border: 0px;
-        transition: .25;
-    }
-
-    .box input[type = 'submit']:hover{
-        color: gray;
-    }
-
-    .overlay-desc {
-  background: rgba(0,0,0,0);
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.overlay-tright{
-  position: absolute;
-  top: 0; right: 0; bottom: auto; left: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.gs{
-  padding-top: 30px;
-  padding-right: 30px;
-  outline: none;
-  background: none;
-  border: 0px;
-  transition: .25;
-}
-
-.gs:hover{
-        color: gray;
-    }
-
     
     </style>
 </html>
