--- a/templates/play.html
+++ b/templates/play.html
@@ -10,12 +10,22 @@
     <body>
 
 
-        <div class="container" style="padding-top: 10%;">
+        <div class="container-fluid text-center">   
+        <div class="row content">
+
+        <div class="col-sm-2" style="height: fit-content;">
+            <img src="{{ url_for('static', filename='assets/blue.png') }}" alt="resistance" style="width: 200px;height: 280px; margin-top: 3%">
+        </div>
+
+
+        <div class="col-sm-8 text-center" style="padding-top: 8%;">
             <ul id="list" style="margin: auto;"></ul>
             <button id="add-item">Add item</button>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         </div>
 
+            </div>
+        </div>
       </body>
       
       <script>
