--- a/templates/play.html
+++ b/templates/play.html
@@ -14,7 +14,7 @@
         <div class="row content">
 
         <div class="col-sm-2" style="height: fit-content;">
-            <img src="{{ url_for('static', filename='assets/blue.png') }}" alt="resistance" style="width: 200px;height: 280px; margin-top: 3%">
+            <img src="{{ url_for('static', filename='assets/blue.png') }}" alt="resistance" id="role-card" style="width: 200px;height: 280px; margin-top: 7%">
         </div>
 
 
