--- a/templates/play.html
+++ b/templates/play.html
@@ -10,7 +10,14 @@
     <body>
 
 
-        <div class="container-fluid text-center">   
+        <div class="container-fluid text-center">  
+
+            <div class="container-fluid">
+                <div class="text-center alert-box success" >You are the team Leader!</div>
+
+            </div>
+
+
         <div class="row content">
 
         <div class="col-sm-2" style="height: fit-content;">
@@ -18,14 +25,17 @@
         </div>
 
 
-        <div class="col-sm-8 text-center" style="padding-top: 8%;">
+        <div class="col-sm-8 text-center" style="padding-top: 5%;">
+            
             <ul id="list" style="margin: auto;"></ul>
             <button id="add-item">Add item</button>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         </div>
 
             </div>
+            
         </div>
+        
       </body>
       
       <script>
