voting mechanics implimented

--- a/templates/play.html
+++ b/templates/play.html
@@ -32,6 +32,13 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         </div>
 
+        <div class="col-sm-2" style="height: fit-content;">
+            <button style="margin-top: 100%;" id="fin-team" onclick="finTeam()">Finalize Team</button>
+            <button style="margin-top: 100%;" id="yay-vote" onclick="yayvote()">Yay!</button>
+            <button style="margin-top: 100%;" id="nay-vote" onclick="nayvote()">Nay!</button>
+
+        </div>
+
             </div>
             
         </div>
