--- a/templates/play.html
+++ b/templates/play.html
@@ -22,6 +22,11 @@
 
         <div class="col-sm-2" style="height: fit-content;">
             <img src="{{ url_for('static', filename='assets/blue.png') }}" alt="resistance" id="role-card" style="width: 200px;height: 280px; margin-top: 7%">
+
+            <div style="margin-top: 40%;">
+            <img src="{{ url_for('static', filename='assets/fail.png') }}" class="mission-card" id="fail">
+            <img src="{{ url_for('static', filename='assets/pass.png') }}" class="mission-card" id="pass" style="margin-top: 10px;">
+            </div>
         </div>
 
 
