--- a/templates/home.html
+++ b/templates/home.html
@@ -23,9 +23,14 @@
     <div class="container-fluid text-center" style="width: 100%; margin: 0px; padding: 0px; border: 0px;">
      
         <div style="background-color: rgb(0, 0, 0); opacity: .3;">
+          <!-- Do not display this image at the moment
             <video width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                 <source src="{{ url_for('static', filename='assets/background.mp4') }}" type="video/mp4">
               </video>
+            --> 
+
+            <img src="{{ url_for('static', filename='assets/bground.gif') }}" width="100%">
+
         </div>
         
 
