team leader data + fixed bugs

--- a/static/styles/playStyle.css
+++ b/static/styles/playStyle.css
@@ -61,3 +61,15 @@ li:hover{
     background-color: gray;
     opacity: .5;
 }
+
+
+
+*{ /*copied from soverflow 4358620   //   Make everything unselectable*/
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
