--- a/static/styles/playStyle.css
+++ b/static/styles/playStyle.css
@@ -55,6 +55,7 @@ li:hover{
 
 .mission-card{
     border-radius: 10%;
+    opacity: 1;
 }
 
 .mission-card:hover{
@@ -73,3 +74,12 @@ li:hover{
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+
+  .overlay-desc {
+    background: rgba(0,0,0,0);
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
