--- a/templates/play.html
+++ b/templates/play.html
@@ -71,6 +71,10 @@
                 <img src="{{ url_for('static', filename='assets/pass.png') }}" class="mission-card" id="pass">
         </div>
 
+        <div class="overlay-desc" style="background-color: gray; opacity: .8;" id="revealmvotes">
+            <button onclick="closeRMV()">Close</button>
+        </div>
+
         
       </body>
       
