--- a/templates/play.html
+++ b/templates/play.html
@@ -61,13 +61,13 @@
             <button style="margin-top: 100%;" id="yay-vote" onclick="yayvote()">Yay!</button>
             <button style="margin-top: 100%;" id="nay-vote" onclick="nayvote()">Nay!</button>
 
-            <div id="missions" style="margin-top: 30%;">
-                <ul style="height: 50%;" id="mss">
-                    <li>1</li>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>1</li>
-                    <li>1</li>
+            <div id="missions" style="margin-top: 5%; height: 100%;">
+                <ul id="mss" style="height: 50vw">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </div>
 
