--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,15 @@
     <link rel="icon" href="{{ url_for('static', filename='assets/icon.png') }}"
     type="image/x-icon">  </head>
 
+    <style>
+      body {
+        background-image: linear-gradient(rgba(224, 224, 224, 0.63), rgba(224, 224, 224, 0.63)), url('static/assets/bground.gif');
+        background-color: black;
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+        background-size: 100% 100%;
+      }
+      </style>
 
   <body style="font-family: cofleyMain">
 
@@ -23,13 +32,14 @@
     <div class="container-fluid text-center" style="width: 100%; margin: 0px; padding: 0px; border: 0px;">
      
         <div style="background-color: rgb(0, 0, 0); opacity: .3;">
+
           <!-- Do not display this image at the moment
             <video width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                 <source src="{{ url_for('static', filename='assets/background.mp4') }}" type="video/mp4">
               </video>
             --> 
 
-            <img src="{{ url_for('static', filename='assets/bground.gif') }}" width="100%">
+            <!-- <img src="{{ url_for('static', filename='assets/bground.gif') }}" width="100%"> -->
 
         </div>
         
