--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -67,7 +67,7 @@
         }
 
 
-      var socket = io.connect('http://192.168.1.12:5000/');
+      var socket = io.connect(window.location.origin);
       var roomID = '{{ roomID }}';
       var name= '{{ name }}';
       $("h1").html("Lobby for " + roomID);
