--- a/the_resistance/templates/lobby.html
+++ b/the_resistance/templates/lobby.html
@@ -14,7 +14,17 @@
     <link rel="icon" href="{{ url_for('static', filename='assets/icon.png') }}"
     type="image/x-icon">  </head>
 
-
+  
+    <style>
+      body {
+        background-image: url('static/assets/cleanfuture.gif');
+        background-color: black;
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+        background-size: 100% 100%;
+      }
+      </style>
+      
   <body style="font-family: cofleyMain">
 
     <h1></h1>
