--- a/the_resistance/templates/play.html
+++ b/the_resistance/templates/play.html
@@ -9,6 +9,17 @@
 
     <title>Resistance</title>
 
+    <style>
+        body {
+          background-image: url('static/assets/cleanfuture.gif');
+          background-color: black;
+          background-repeat: no-repeat;
+          background-attachment: fixed; 
+          background-size: 100% 100%;
+        }
+        </style>
+
+
     <body>
 
 
