--- a/the_resistance/templates/play.html
+++ b/the_resistance/templates/play.html
@@ -6,8 +6,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/playStyle.css') }}">
+    <title>The Resistance</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/icon.png') }}" 
+    type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='assets/icon.png') }}"
+    type="image/x-icon">  </head>
 
-    <title>Resistance</title>
 
     <style>
         body {
