--- a/the_resistance/static/styles/lobbyStyle.css
+++ b/the_resistance/static/styles/lobbyStyle.css
@@ -9,7 +9,8 @@
 
 .list-item{
 	list-style: none;
-	background-color: aqua;
+    background-color: rgb(0, 53, 199);
+    /*background: url("static/assets/blue.jpg");*/
 	height: 100px;
     width: 100px;
     max-width: 200px;
@@ -26,10 +27,13 @@ li{
 }
 
 li:hover{
-    background-color: rgb(209, 243, 243);
+    background-color: rgb(75, 107, 196);
     top: 48%;
 	height: 100px;
     width: 100px;
     max-width: 200px;
 }
 
+body{
+    opacity: .85;
+}
