--- a/the_resistance/templates/lobby.html
+++ b/the_resistance/templates/lobby.html
@@ -17,7 +17,7 @@
   
     <style>
       body {
-        background-image: url('static/assets/cleanfuture.gif');
+        background-image: url('static/assets/skylinebackground.jpg');
         background-color: black;
         background-repeat: no-repeat;
         background-attachment: fixed; 
@@ -25,18 +25,19 @@
       }
       </style>
       
-  <body style="font-family: cofleyMain">
+  <body style="font-family: zeroHour">
 
     <h1></h1>
     
+    <!-- 
+    <ul id="users"></ul> -->
 
-    <ul id="users"></ul>
     <ul id="players"></ul>
     <button id="add-item">Add item</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <div class="row" style="float: right; margin-right: 5%; margin-top: 10%;">
-      <button id="stgame" onclick="clicked()">Start Game</button>
+    <div class="row" style="float: right; margin-right: 5%; margin-top: 10%; font-family: zeroHour;">
+      <button id="stgame" style="font-family: zeroHour;" onclick="clicked()">Start Game</button>
     </div>
 
 
