--- a/the_resistance/static/styles/playStyle.css
+++ b/the_resistance/static/styles/playStyle.css
@@ -39,6 +39,7 @@
 
 #role-card{
     border-radius: 10%;
+    padding-top: 10vm;
 }
 
 #role-card:hover{
@@ -55,18 +56,21 @@
 .success {
     color: #ffffff;
     /*background-color: #db3bab;*/
-    border-color: #ffffff;
+    /*border-color: #ffffff;*/
     display: none;
 }
 
 .mission-card{
     border-radius: 10%;
     opacity: 1;
+    margin: 1vw;
+    transition-duration: 1s;
 }
 
 .mission-card:hover{
     background-color: gray;
     opacity: .5;
+    margin-top: -1vh;
 }
 
 
@@ -105,6 +109,7 @@
         color: rgb(206, 198, 198);    
         transition-duration: 1s;
         display: inline-block;
+        
     }
 
     #missions li:hover{
@@ -123,11 +128,13 @@
         padding:16px 31px;
         text-decoration:none;
         text-shadow:0px 1px 0px #dab3f3;
+        transition-duration: 1s;
     }
 
     .buttons:hover{
         box-shadow: 0 0 5px 3px rgb(148, 143, 143);
         font-weight: 750;
+        margin-top: -2vh;
     }
 
     .buttons:active {
