--- a/the_resistance/templates/lobby.html
+++ b/the_resistance/templates/lobby.html
@@ -33,7 +33,7 @@
     <ul id="users"></ul> -->
 
     <ul id="players"></ul>
-    <button id="add-item">Add item</button>
+    <!--<button id="add-item">Add item</button>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <div class="row" style="float: right; margin-right: 5%; margin-top: 10%; font-family: zeroHour;">
